--- a/firebase.json
+++ b/firebase.json
@@ -13,8 +13,9 @@
       }
     ]
   },
-  "functions": { // <-- 이 functions 섹션이 있어야 합니다.
-    "source": "functions", // <-- 당신의 functions/index.js가 있는 폴더
-    "runtime": "nodejs18" // 또는 다른 Node.js 런타임 버전
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs18" 
+   
   }
 }
